--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.0",
+    "http-server": "^0.11.1",
     "less": "^3.0.4",
     "markdown-it": "^8.4.2",
     "vue": "^2.5.2",
